feat(web): add open-graph image

--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -1,16 +1,37 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>trok ~ Accessing your local service should be simple</title>
+    <meta
+      name="description"
+      content="It's like ngrok but simpler. Just install, run the command, and get a shareable URL to access your local service from anywhere. No complex setup—just instant, secure tunneling to the internet."
+    />
+    <meta
+      property="og:title"
+      content="trok ~ Accessing your local service should be simple"
+    />
+    <meta
+      property="og:description"
+      content="It's like ngrok but simpler. Just install, run the command, and get a shareable URL to access your local service from anywhere. No complex setup—just instant, secure tunneling to the internet."
+    />
+    <meta property="og:image" content="/preview.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="trok ~ Accessing your local service should be simple"
+    />
+    <meta
+      name="twitter:description"
+      content="It's like ngrok but simpler. Just install, run the command, and get a shareable URL to access your local service from anywhere. No complex setup—just instant, secure tunneling to the internet."
+    />
+    <meta name="twitter:image" content="/preview.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>trok ~ Accessing your local service should be simple</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/index.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
 </html>
